Closed Bug 910797 Opened 12 years ago Closed 12 years ago

Fix Event.isTrusted handling for workers

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(2 files)

Attached patch patchSplinter Review
"IsCaller" is a bit wrong. Should be something like "IsInChromeContext" but that doesn't mean JSContext but the broader concept. So IsCaller for now.
Attachment #797353 - Flags: review?(khuey)
Comment on attachment 797353 [details] [diff] [review] patch Review of attachment 797353 [details] [diff] [review]: ----------------------------------------------------------------- ::: content/base/src/nsContentUtils.cpp @@ +1771,5 @@ > +nsContentUtils::ThreadsafeIsCallerChrome() > +{ > + return NS_IsMainThread() ? > + IsCallerChrome() : > + mozilla::dom::workers::IsCurrentThreadRunningChromeWorker(); Please put a big fat assertion in IsCallerChrome. ::: xpcom/base/CycleCollectedJSRuntime.h @@ +205,5 @@ > + JSRuntime* Runtime() const > + { > + MOZ_ASSERT(mJSRuntime); > + return mJSRuntime; > + } You should get rid of the Runtime() methods in XPCJSRuntime and WorkerJSRuntime then.
Attachment #797353 - Flags: review?(khuey) → review+
Blocks: 853893
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: