Bug 910797, make Event.isTrusted to work in workers, r=khuey